--- a/.github/workflows/main_madworld-api.yml
+++ b/.github/workflows/main_madworld-api.yml
@@ -26,9 +26,11 @@ jobs:
 
     - name: Build with dotnet
       run: dotnet build --configuration Release
+      working-directory: ./MadWorld/MadWorld.API
 
     - name: dotnet publish
       run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+      working-directory: ./MadWorld/MadWorld.API
 
     - name: Upload artifact for deployment job
       uses: actions/upload-artifact@v2
