Add application insight

--- a/MadWorld/MadWorld.API/appsettings.json
+++ b/MadWorld/MadWorld.API/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ApplicationInsights": {
+    "InstrumentationKey": "49d6828c-87f7-4dff-8c0b-d7a79006be77"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
