--- a/MadWorld/MadWorld.API/appsettings.Development.json
+++ b/MadWorld/MadWorld.API/appsettings.Development.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ApplicationInsights": {
+    "InstrumentationKey": "putinstrumentationkeyhere"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
