--- a/MadWorld/MadWorld.Console/MadWorld.Console.csproj
+++ b/MadWorld/MadWorld.Console/MadWorld.Console.csproj
@@ -5,4 +5,13 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Microsoft.Azure.ApplicationInsights.Query" />
+    <None Remove="Microsoft.Rest.ClientRuntime.Azure.Authentication" />
+    <None Remove="Microsoft.Azure.CognitiveServices.Language.LUIS.Authoring" />
+    <None Remove="Microsoft.ApplicationInsights" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Azure.ApplicationInsights.Query" Version="1.0.0" />
+  </ItemGroup>
 </Project>
