Fix mssql forge

--- a/MadWorld/MadWorld.API/appsettings.json
+++ b/MadWorld/MadWorld.API/appsettings.json
@@ -12,5 +12,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "StartupSettings": {
+    "ForceUseMSSQL": false
+  },
   "AllowedHosts": "*"
 }
