--- a/MadWorld/MadWorld.API/MadWorld.API.csproj
+++ b/MadWorld/MadWorld.API/MadWorld.API.csproj
@@ -8,6 +8,7 @@
     <None Remove="Microsoft.ApplicationInsights.AspNetCore" />
     <None Remove="Microsoft.EntityFrameworkCore.Design" />
     <None Remove="Migrations\" />
+    <None Remove="Models\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.18.0" />
@@ -23,5 +24,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Migrations\" />
+    <Folder Include="Models\" />
   </ItemGroup>
 </Project>
