--- a/MadWorld/MadWorld.API/appsettings.Development.json
+++ b/MadWorld/MadWorld.API/appsettings.Development.json
@@ -11,5 +11,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "StartupSettings": {
+    "ForceUseMSSQL": false
   }
 }
