--- a/MadWorld/MadWorld.API/appsettings.json
+++ b/MadWorld/MadWorld.API/appsettings.json
@@ -13,7 +13,7 @@
     }
   },
   "StartupSettings": {
-    "ForceUseMSSQL": false
+    "ForgePostgresMigration": false
   },
   "AllowedHosts": "*"
 }
