--- a/MadWorld/MadWorld.Website/wwwroot/appsettings.json
+++ b/MadWorld/MadWorld.Website/wwwroot/appsettings.json
@@ -1,5 +1,6 @@
 ﻿{
   "Azure": {
     "InstrumentationKey": "0a5c1e6c-0422-4f63-955d-0b60b2e5477d"
-  }
+  },
+  "ApiUrl": "https://api.mad-world.nl/"
 }
