--- a/MadWorld/MadWorld.Website/wwwroot/appsettings.Development.json
+++ b/MadWorld/MadWorld.Website/wwwroot/appsettings.Development.json
@@ -1,5 +1,6 @@
 ﻿{
   "Azure": {
     "InstrumentationKey": "49d6828c-87f7-4dff-8c0b-d7a79006be77"
-  }
+  },
+  "ApiUrl": "https://localhost:59761/"
 }
