--- a/MadWorld/MadWorld.API/appsettings.Development.json
+++ b/MadWorld/MadWorld.API/appsettings.Development.json
@@ -13,6 +13,7 @@
     }
   },
   "StartupSettings": {
-    "ForceUseMSSQL": false
+    "ForgePostgresMigration": false,
+    "ForgeMsSqlMigration": false
   }
 }
