--- a/MadWorld/MadWorld.API/appsettings.Development.json
+++ b/MadWorld/MadWorld.API/appsettings.Development.json
@@ -12,8 +12,18 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "IdentityServer": {
+    "Clients": {
+      "MadWorld.API.Client": {
+        "Profile": "IdentityServerSPA"
+      }
+    },
+    "Key": {
+      "Type": "Development"
+    }
+  },
   "StartupSettings": {
     "ForgePostgresMigration": false,
-    "ForgeMsSqlMigration": false
+    "ForgeMsSqlMigration": true
   }
 }
