--- a/MadWorld/MadWorld.API/appsettings.json
+++ b/MadWorld/MadWorld.API/appsettings.json
@@ -12,8 +12,19 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "IdentityServer": {
+    "Clients": {
+      "MadWorld.API.Client": {
+        "Profile": "IdentityServerSPA"
+      }
+    },
+    "Key": {
+      "Type": "Development"
+    }
+  },
   "StartupSettings": {
-    "ForgePostgresMigration": false
+    "ForgePostgresMigration": false,
+    "ForgeMsSqlMigration": true
   },
   "AllowedHosts": "*"
 }
