--- a/MadWorld/MadWorld.Website/wwwroot/appsettings.Development.json
+++ b/MadWorld/MadWorld.Website/wwwroot/appsettings.Development.json
@@ -2,5 +2,10 @@
   "Azure": {
     "InstrumentationKey": "49d6828c-87f7-4dff-8c0b-d7a79006be77"
   },
-  "ApiUrl": "https://localhost:59761/"
+  "ApiUrl": "https://localhost:59761/",
+  "ConfigurationEndpoint": "https://localhost:59761/_configuration/MadWorld.API.Client",
+  "Local": {
+    "Authority": "https://localhost:59761/",
+    "ClientId": "{CLIENT ID}"
+  }
 }
