--- a/MadWorld/MadWorld.Website/wwwroot/appsettings.json
+++ b/MadWorld/MadWorld.Website/wwwroot/appsettings.json
@@ -2,5 +2,10 @@
   "Azure": {
     "InstrumentationKey": "0a5c1e6c-0422-4f63-955d-0b60b2e5477d"
   },
-  "ApiUrl": "https://api.mad-world.nl/"
+  "ApiUrl": "https://api.mad-world.nl/",
+  "ConfigurationEndpoint": "https://api.mad-world.nl/_configuration/MadWorld.API.Client",
+  "Local": {
+    "Authority": "https://api.mad-world.nl/",
+    "ClientId": "{CLIENT ID}"
+  }
 }
