--- a/MadWorld/MadWorld.API/appsettings.Development.json
+++ b/MadWorld/MadWorld.API/appsettings.Development.json
@@ -12,18 +12,14 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "IdentityServer": {
-    "Clients": {
-      "MadWorld.API.Client": {
-        "Profile": "IdentityServerSPA"
-      }
-    },
-    "Key": {
-      "Type": "Development"
-    }
+  "AzureAdB2C": {
+    "Instance": "https://nlMadWorld.b2clogin.com/",
+    "ClientId": "36e6692b-2795-4ecd-ab76-3ff2f55373e7",
+    "Domain": "nlMadWorld.onmicrosoft.com",
+    "SignUpSignInPolicyId": "B2C_1_Sign_In_Up_Policy"
   },
   "StartupSettings": {
-    "ForgePostgresMigration": false,
-    "ForgeMsSqlMigration": true
+    "ForgePostgresMigration": true,
+    "ForgeMsSqlMigration": false
   }
 }
