--- a/MadWorld/MadWorld.Website/wwwroot/appsettings.Development.json
+++ b/MadWorld/MadWorld.Website/wwwroot/appsettings.Development.json
@@ -3,9 +3,9 @@
     "InstrumentationKey": "49d6828c-87f7-4dff-8c0b-d7a79006be77"
   },
   "ApiUrl": "https://localhost:59761/",
-  "ConfigurationEndpoint": "https://localhost:59761/_configuration/MadWorld.API.Client",
-  "Local": {
-    "Authority": "https://localhost:59761/",
-    "ClientId": "{CLIENT ID}"
+  "AzureAdB2C": {
+    "Authority": "https://nlMadWorld.b2clogin.com/nlMadWorld.onmicrosoft.com/B2C_1_Sign_In_Up_Policy",
+    "ClientId": "90cc965e-9459-478a-8de5-5c9f58691946",
+    "ValidateAuthority": false
   }
 }
