--- a/MadWorld/MadWorld.API/appsettings.Development.json
+++ b/MadWorld/MadWorld.API/appsettings.Development.json
@@ -19,7 +19,7 @@
     "SignUpSignInPolicyId": "B2C_1_Sign_In_Up_Policy"
   },
   "StartupSettings": {
-    "ForgePostgresMigration": true,
-    "ForgeMsSqlMigration": false
+    "ForgePostgresMigration": false,
+    "ForgeMsSqlMigration": true
   }
 }
