--- a/MadWorld/MadWorld.Shared/MadWorld.Shared.csproj
+++ b/MadWorld/MadWorld.Shared/MadWorld.Shared.csproj
@@ -8,10 +8,12 @@
     <None Remove="Helper\" />
     <None Remove="Models\" />
     <None Remove="Models\Pages\" />
+    <None Remove="Models\Admin\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Helper\" />
     <Folder Include="Models\" />
     <Folder Include="Models\Pages\" />
+    <Folder Include="Models\Admin\" />
   </ItemGroup>
 </Project>
