--- a/MadWorld/MadWorld.Website/MadWorld.Website.csproj
+++ b/MadWorld/MadWorld.Website/MadWorld.Website.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="BlazorDownloadFile" Version="2.1.6" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="5.0.0" />
     <PackageReference Include="Microsoft.Authentication.WebAssembly.Msal" Version="5.0.10" />
+    <PackageReference Include="BlazorMonaco" Version="2.1.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -32,6 +33,7 @@
     <None Remove="Microsoft.AspNetCore.Components.WebAssembly.Authentication" />
     <None Remove="Microsoft.Authentication.WebAssembly.Msal" />
     <None Remove="Pages\Admin\" />
+    <None Remove="BlazorMonaco" />
   </ItemGroup>
   <ItemGroup>
     <Content Remove="wwwroot\images\" />
