Add resume fields

--- a/MadWorld/MadWorld.API/appsettings.Development.json
+++ b/MadWorld/MadWorld.API/appsettings.Development.json
@@ -20,6 +20,6 @@
   },
   "StartupSettings": {
     "ForgePostgresMigration": false,
-    "ForgeMsSqlMigration": true
+    "ForgeMsSqlMigration": false
   }
 }
