--- a/MadWorld/MadWorld.API/appsettings.json
+++ b/MadWorld/MadWorld.API/appsettings.json
@@ -20,7 +20,7 @@
   },
   "StartupSettings": {
     "ForgePostgresMigration": false,
-    "ForgeMsSqlMigration": true
+    "ForgeMsSqlMigration": false
   },
   "AllowedHosts": "*"
 }
