--- a/MadWorld/MadWorld.API/appsettings.Development.json
+++ b/MadWorld/MadWorld.API/appsettings.Development.json
@@ -3,7 +3,8 @@
     "InstrumentationKey": "49d6828c-87f7-4dff-8c0b-d7a79006be77"
   },
   "ConnectionStrings": {
-    "MadWorldDatabase": "host=localhost;port=8080;database=MadWorldDB;user id=postgres;password=notmyrealpassword"
+    "MadWorldDatabase": "host=localhost;port=8080;database=MadWorldDB;user id=postgres;password=notmyrealpassword",
+    "MadWorldBlobs": "UseDevelopmentStorage=true"
   },
   "Logging": {
     "LogLevel": {
