--- a/MadWorld/MadWorld.API/appsettings.json
+++ b/MadWorld/MadWorld.API/appsettings.json
@@ -2,8 +2,12 @@
   "ApplicationInsights": {
     "InstrumentationKey": "49d6828c-87f7-4dff-8c0b-d7a79006be77"
   },
+  "Azure": {
+    "Containername": "madworld"
+  },
   "ConnectionStrings": {
-    "MadWorldDatabase": "host=localhost;port=8080;database=MadWorldDB;user id=postgres;password=notmyrealpassword"
+    "MadWorldDatabase": "host=localhost;port=8080;database=MadWorldDB;user id=postgres;password=notmyrealpassword",
+    "MadWorldBlobs": "UseDevelopmentStorage=true"
   },
   "Logging": {
     "LogLevel": {
