Add security page

--- a/MadWorld/MadWorld.API/appsettings.Development.json
+++ b/MadWorld/MadWorld.API/appsettings.Development.json
@@ -2,6 +2,9 @@
   "ApplicationInsights": {
     "InstrumentationKey": "49d6828c-87f7-4dff-8c0b-d7a79006be77"
   },
+  "AzureSettings": {
+    "ContainerName": "madworld"
+  },
   "ConnectionStrings": {
     "MadWorldDatabase": "host=localhost;port=8080;database=MadWorldDB;user id=postgres;password=notmyrealpassword",
     "MadWorldBlobs": "UseDevelopmentStorage=true"
