--- a/MadWorld/MadWorld.API/appsettings.json
+++ b/MadWorld/MadWorld.API/appsettings.json
@@ -2,7 +2,7 @@
   "ApplicationInsights": {
     "InstrumentationKey": "49d6828c-87f7-4dff-8c0b-d7a79006be77"
   },
-  "Azure": {
+  "AzureSettings": {
     "Containername": "madworld"
   },
   "ConnectionStrings": {
