--- a/MadWorld/MadWorld.Shared/MadWorld.Shared.csproj
+++ b/MadWorld/MadWorld.Shared/MadWorld.Shared.csproj
@@ -9,11 +9,15 @@
     <None Remove="Models\" />
     <None Remove="Models\Pages\" />
     <None Remove="Models\Admin\" />
+    <None Remove="Models\Pages\Support\" />
+    <None Remove="Models\Form\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Helper\" />
     <Folder Include="Models\" />
     <Folder Include="Models\Pages\" />
     <Folder Include="Models\Admin\" />
+    <Folder Include="Models\Pages\Support\" />
+    <Folder Include="Models\Form\" />
   </ItemGroup>
 </Project>
