Add roles to API

--- a/MadWorld/MadWorld.API/MadWorld.API.csproj
+++ b/MadWorld/MadWorld.API/MadWorld.API.csproj
@@ -16,6 +16,7 @@
     <None Remove="Microsoft.AspNetCore.Authentication.AzureADB2C.UI" />
     <None Remove="Microsoft.Identity.Web" />
     <None Remove="Controllers\Admin\" />
+    <None Remove="Attributes\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.18.0" />
@@ -35,5 +36,6 @@
     <Folder Include="Migrations\" />
     <Folder Include="Models\" />
     <Folder Include="Controllers\Admin\" />
+    <Folder Include="Attribute\" />
   </ItemGroup>
 </Project>
