Add rights in blazor

--- a/MadWorld/MadWorld.Shared/MadWorld.Shared.csproj
+++ b/MadWorld/MadWorld.Shared/MadWorld.Shared.csproj
@@ -11,6 +11,7 @@
     <None Remove="Models\Admin\" />
     <None Remove="Models\Pages\Support\" />
     <None Remove="Models\Form\" />
+    <None Remove="Models\Authorization\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Helper\" />
@@ -19,5 +20,6 @@
     <Folder Include="Models\Admin\" />
     <Folder Include="Models\Pages\Support\" />
     <Folder Include="Models\Form\" />
+    <Folder Include="Models\Authorization\" />
   </ItemGroup>
 </Project>
