--- a/MadWorld/MadWorld.Website/MadWorld.Website.csproj
+++ b/MadWorld/MadWorld.Website/MadWorld.Website.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0-rc.2.21480.5" />
     <PackageReference Include="Microsoft.Authentication.WebAssembly.Msal" Version="6.0.0-rc.2.21480.10" />
     <PackageReference Include="BlazorMonaco" Version="2.1.0" />
+    <PackageReference Include="BlazorTable" Version="1.17.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -44,6 +45,10 @@
     <None Remove="Services\Support\" />
     <None Remove="Factory\" />
     <None Remove="Services\Authorization\" />
+    <None Remove="Pages\Admin\Users\" />
+    <None Remove="BlazorTable" />
+    <None Remove="Services\Admin\" />
+    <None Remove="Services\Admin\Interfaces\" />
   </ItemGroup>
   <ItemGroup>
     <Content Remove="wwwroot\images\" />
@@ -65,6 +70,9 @@
     <Folder Include="Services\Support\" />
     <Folder Include="Factory\" />
     <Folder Include="Services\Authorization\" />
+    <Folder Include="Pages\Admin\Users\" />
+    <Folder Include="Services\Admin\" />
+    <Folder Include="Services\Admin\Interfaces\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MadWorld.Shared\MadWorld.Shared.csproj">
