--- a/MadWorld/MadWorld.Tests/MadWorld.Tests.csproj
+++ b/MadWorld/MadWorld.Tests/MadWorld.Tests.csproj
@@ -17,6 +17,24 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="AutoFixture" Version="4.17.0" />
+    <PackageReference Include="AutoFixture.AutoMoq" Version="4.17.0" />
+    <PackageReference Include="AutoFixture.Xunit2" Version="4.17.0" />
+    <PackageReference Include="FluentAssertions" Version="6.2.0" />
+    <PackageReference Include="Moq" Version="4.16.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="Setup\" />
+    <None Remove="AutoFixture" />
+    <None Remove="AutoFixture.AutoMoq" />
+    <None Remove="AutoFixture.Xunit2" />
+    <None Remove="FluentAssertions" />
+    <None Remove="Moq" />
+    <None Remove="Business\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Setup\" />
+    <Folder Include="Business\" />
+  </ItemGroup>
 </Project>
