--- a/MadWorld/MadWorld.Website/MadWorld.Website.csproj
+++ b/MadWorld/MadWorld.Website/MadWorld.Website.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Microsoft.Authentication.WebAssembly.Msal" Version="6.0.0" />
     <PackageReference Include="BlazorMonaco" Version="2.1.0" />
     <PackageReference Include="BlazorTable" Version="1.17.0" />
+    <PackageReference Include="Microsoft.Web.LibraryManager.Build" Version="2.1.113" />
   </ItemGroup>
 
   <ItemGroup>
@@ -49,6 +50,7 @@
     <None Remove="BlazorTable" />
     <None Remove="Services\Admin\" />
     <None Remove="Services\Admin\Interfaces\" />
+    <None Remove="Microsoft.Web.LibraryManager.Build" />
   </ItemGroup>
   <ItemGroup>
     <Content Remove="wwwroot\images\" />
