--- a/MadWorld/MadWorld.API/MadWorld.API.csproj
+++ b/MadWorld/MadWorld.API/MadWorld.API.csproj
@@ -19,6 +19,7 @@
     <None Remove="Attributes\" />
     <None Remove="SignalR\" />
     <None Remove="SignalR\Interfaces\" />
+    <None Remove="Controllers\Rust\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.19.0" />
@@ -41,5 +42,6 @@
     <Folder Include="Attribute\" />
     <Folder Include="SignalR\" />
     <Folder Include="SignalR\Interfaces\" />
+    <Folder Include="Controllers\Rust\" />
   </ItemGroup>
 </Project>
