--- a/MadWorld/MadWorld.API/Properties/launchSettings.json
+++ b/MadWorld/MadWorld.API/Properties/launchSettings.json
@@ -15,7 +15,8 @@
       "launchUrl": "/",
       "applicationUrl": "https://localhost:59761;http://localhost:25418",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "DYLD_LIBRARY_PATH": "../Reference"
       }
     },
     "IIS Express": {
