--- a/MadWorld/MadWorld.API/MadWorld.API.csproj
+++ b/MadWorld/MadWorld.API/MadWorld.API.csproj
@@ -44,4 +44,7 @@
     <Folder Include="SignalR\Interfaces\" />
     <Folder Include="Controllers\Rust\" />
   </ItemGroup>
+  <ItemGroup>
+      <Content Include="../Reference/x86/*" CopyToPublishDirectory="Always" />
+  </ItemGroup>
 </Project>
