Build rust in pipeline

--- a/.github/workflows/main_madworld-api.yml
+++ b/.github/workflows/main_madworld-api.yml
@@ -31,6 +31,10 @@ jobs:
     - name: dotnet publish
       run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
       working-directory: ./MadWorld/MadWorld.API
+      
+    - name: Build
+      run: cargo build --target-dir ${{env.DOTNET_ROOT}}/myapp/Rust --target x86_64-unknown-linux-gnu --verbose
+      working-directory: ./Rust/learn_lib
 
     - name: Upload artifact for deployment job
       uses: actions/upload-artifact@v2
