--- a/.github/workflows/main_madworld-api.yml
+++ b/.github/workflows/main_madworld-api.yml
@@ -37,8 +37,8 @@ jobs:
       working-directory: ./Rust/learn_lib
 
     - name: Copy Rust dll
-      run: cp Reference/x86_64-unknown-linux-gnu/debug/liblearn_lib.so ${{env.DOTNET_ROOT}}/myapp
-      working-directory: ${{env.DOTNET_ROOT}}/Rust
+      run: cp ${{env.DOTNET_ROOT}}/Rust/Reference/x86_64-unknown-linux-gnu/debug/liblearn_lib.so ${{env.DOTNET_ROOT}}/myapp
+      working-directory: ${{env.DOTNET_ROOT}}/Rust/Reference
 
     - name: Upload artifact for deployment job
       uses: actions/upload-artifact@v2
