--- a/Rust/learn_lib/Cargo.toml
+++ b/Rust/learn_lib/Cargo.toml
@@ -3,10 +3,10 @@ name = "learn_lib"
 version = "0.1.0"
 edition = "2018"
 
-#[build]
-#build-stage = 1
+[build]
+build-stage = 1
 #target = ["aarch64-apple-darwin"]
-#target = ["x86_64-unknown-linux-gnu"]
+target = ["x86_64-unknown-linux-gnu"]
 
 
 [lib]
