--- a/Rust/learn_lib/Cargo.toml
+++ b/Rust/learn_lib/Cargo.toml
@@ -11,7 +11,7 @@ target = ["x86_64-unknown-linux-gnu"]
 
 [lib]
 name="learn_lib"
-#crate-type = ["cdylib"]
+crate-type = ["cdylib"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
