--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,7 +18,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Build
       run: cargo build --verbose
-      working-directory: ./Rust/lib_tester
+      working-directory: ./Rust/learn_lib
     - name: Run tests
       run: cargo test --verbose
-      working-directory: ./Rust/lib_tester
+      working-directory: ./Rust/learn_lib
