--- a/Rust/learn_lib/Cargo.toml
+++ b/Rust/learn_lib/Cargo.toml
@@ -5,8 +5,8 @@ edition = "2018"
 
 [build]
 build-stage = 1
-#target = ["aarch64-apple-darwin"]
-target = ["x86_64-unknown-linux-gnu"]
+target = ["aarch64-apple-darwin"]
+#target = ["x86_64-unknown-linux-gnu"]
 
 
 [lib]
