--- a/Rust/lib_tester/Cargo.toml
+++ b/Rust/lib_tester/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2018"
 
 [Build]
 target = "aarch64-apple-darwin"
+#target = ["x86_64-unknown-linux-gnu"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
