Add Ipfs files to Mad-World

--- a/MadWorld/MadWorld.API/appsettings.Development.json
+++ b/MadWorld/MadWorld.API/appsettings.Development.json
@@ -25,5 +25,8 @@
   "StartupSettings": {
     "ForgePostgresMigration": false,
     "ForgeMsSqlMigration": false
+  },
+  "ApplicationUrls": {
+    "MadWorldVpsIpfs": "https://vps.mad-world.nl/ipfs"
   }
 }
