--- a/MadWorld/MadWorld.API/appsettings.json
+++ b/MadWorld/MadWorld.API/appsettings.json
@@ -26,5 +26,8 @@
     "ForgePostgresMigration": false,
     "ForgeMsSqlMigration": false
   },
+  "ApplicationUrls": {
+    "MadWorldVpsIpfs": "https://vps.mad-world.nl/ipfs"
+  },
   "AllowedHosts": "*"
 }
