--- a/MadWorld/MadWorld.API/appsettings.Development.json
+++ b/MadWorld/MadWorld.API/appsettings.Development.json
@@ -27,6 +27,6 @@
     "ForgeMsSqlMigration": false
   },
   "ApplicationUrls": {
-    "MadWorldVpsIpfs": "https://vps.mad-world.nl/ipfs"
+    "MadWorldVpsIpfs": "https://vps.mad-world.nl/ipfs-gateway/ipfs"
   }
 }
