--- a/MadWorld/MadWorld.API/appsettings.json
+++ b/MadWorld/MadWorld.API/appsettings.json
@@ -27,7 +27,7 @@
     "ForgeMsSqlMigration": false
   },
   "ApplicationUrls": {
-    "MadWorldVpsIpfs": "https://vps.mad-world.nl/ipfs"
+    "MadWorldVpsIpfs": "https://vps.mad-world.nl/ipfs-gateway/ipfs"
   },
   "AllowedHosts": "*"
 }
