--- a/MadWorld/MadWorld.API/appsettings.Development.json
+++ b/MadWorld/MadWorld.API/appsettings.Development.json
@@ -5,6 +5,9 @@
   "AzureSettings": {
     "ContainerName": "madworld"
   },
+  "ApplicationSettings": {
+    "CorsUrls": [ "https://localhost:5001", "https://www.mad-world.nl", "https://mad-world.nl" ]
+  },
   "ConnectionStrings": {
     "MadWorldDatabase": "host=localhost;port=8080;database=MadWorldDB;user id=postgres;password=notmyrealpassword",
     "MadWorldBlobs": "UseDevelopmentStorage=true"
