Add frontend Admin IPFS

--- a/MadWorld/MadWorld.Website/MadWorld.Website.csproj
+++ b/MadWorld/MadWorld.Website/MadWorld.Website.csproj
@@ -56,6 +56,7 @@
     <None Remove="State\Interface\" />
     <None Remove="Microsoft.AspNetCore.SignalR.Client" />
     <None Remove="Services\Tools\" />
+    <None Remove="Pages\Admin\IPFS\" />
   </ItemGroup>
   <ItemGroup>
     <Content Remove="wwwroot\images\" />
@@ -83,6 +84,7 @@
     <Folder Include="State\" />
     <Folder Include="State\Interface\" />
     <Folder Include="Services\Tools\" />
+    <Folder Include="Pages\Admin\IPFS\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MadWorld.Shared\MadWorld.Shared.csproj">
