--- a/MadWorld/MadWorld.Console/MadWorld.Console.csproj
+++ b/MadWorld/MadWorld.Console/MadWorld.Console.csproj
@@ -26,5 +26,6 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MadWorld.DataLayer\MadWorld.DataLayer.csproj" />
+    <ProjectReference Include="..\MadWorld.CustomPackages\MadWorld.Optional\MadWorld.Optional.csproj" />
   </ItemGroup>
 </Project>
